--- a/simScripts/DRsims.Rmd
+++ b/simScripts/DRsims.Rmd
@@ -9,30 +9,19 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r}
-
-
-out <- do_sims(10000, 3, 20)
-out[, coverage := CI_left <= ATE & CI_right >= ATE]
-results <- unique(out[, .(sd = mean((CI_right - CI_left)/2/1.96),  se = sd(estimate-ATE), bias = mean(abs(estimate - ATE)), coverage = mean(coverage)), by = c("misp", "estimator", "lrnr")])
-
-results[, rmse := sqrt(bias^2 + se^2)]
- results
-```
+ 
 
 
 ```{r}
-ATE <- 1
-out <- do_sims(4000, 0.5, 20)
+ 
 results <- out
 results[, coverage := CI_left <= ATE & CI_right >= ATE]
 results[, sd := abs(CI_left -CI_right)/1.96/2]
 
 results
-results <- unique(results[, .(sd = mean(sd), se = sd(estimate), bias = abs(estimate - ATE), coverage = mean(coverage)), by = c( "misp",   "estimator")])
+results <- unique(results[, .(sd = mean(sd), se = sd(estimate-ATE), bias = abs(mean(estimate - ATE)), coverage = mean(coverage)), by = c( "misp",   "estimator", "lrnr")])
 results[, rmse := sqrt(bias^2 + se^2)]
-results <- results[!duplicated(results[, c( "misp",  "estimator"), with = F]),]
-
+ 
 results
 ```
 
@@ -40,23 +29,19 @@ results
 ```{r}
 library(data.table)
 
-n_list <- c(500, 1000, 2000, 3000, 4000, 5000)
-pos_list <- c(0.5, 1, 2, 3)
+n_list <- c(  7500 )
+pos_list <- c(3)
 
 results <-
   rbindlist(unlist(lapply(n_list, function(n){
     unlist(lapply(pos_list, function(pos) {
   lapply(c(0), function(misp) {
     try({
-      dat <-  get_data(100000, pos)
-      pi <-dat$pi
-      ATE <- dat$ATE
-      pos_const <- signif(min(pi, 1-pi),1)
-    key <- paste0("DR_iter=", "500", "_n=", n, "_pos=", pos )
+      
+    key <- paste0("DR_iter=", "1000", "_n=", n, "_pos=", pos )
    data <- fread(paste0("../simResultsDR/sim_results_", key, ".csv"))
    data$n <- n
-   data$pos <- pos_const
-   data$ATE <- ATE
+   data$pos <- pos
    return(data)
     })
     return(data.table())
@@ -67,12 +52,10 @@ results <-
  
 results[, coverage := CI_left <= ATE & CI_right >= ATE]
 results[, sd := abs(CI_left -CI_right)/1.96/2]
-
 results
-results <- unique(results[, .(sd = mean(sd), se = sd(estimate), bias = mean(abs(estimate - ATE)), coverage = mean(coverage)), by = c("pos", "n", "misp",   "estimator")])
+ results <- unique(results[, .(sd = mean(sd), se = sd(estimate-ATE), bias = abs(mean(estimate - ATE)), coverage = mean(coverage)), by = c("pos", "n", "misp",   "estimator", "lrnr")])
 results[, rmse := sqrt(bias^2 + se^2)]
-results <- results[!duplicated(results[, c("pos", "n", "misp",  "estimator"), with = F]),]
-
+ 
  results
 
 ```
