--- a/DRsims.Rmd
+++ b/DRsims.Rmd
@@ -25,6 +25,11 @@ results[, rmse := sqrt(bias^2 + se^2)]
 results
 ```
 
+Do table
+
+For each lrnr.
+ n  Treatment Outcome Both
+     mse (coverage)
 
 
 ```{r}
@@ -34,7 +39,7 @@ results[results$lrnr=="xgboost",]
 ```{r}
 library(data.table)
 
-n_list <- c(  500, 1000, 2000, 3000, 4000, 5000  )
+n_list <- c(   1000, 2000, 3000, 4000, 5000  )
 pos_list <- c(2 )
 
 results <-
@@ -44,7 +49,7 @@ results <-
     try({
       
     key <- paste0("DR_iter=", "1000", "_n=", n, "_pos=", pos )
-   data <- fread(paste0("../simResultsDR/sim_results_", key, ".csv"))
+   data <- fread(paste0("./simResultsDR/sim_results_", key, ".csv"))
    
    return(data)
     })
