--- a/vignette.Rmd
+++ b/vignette.Rmd
@@ -46,20 +46,32 @@ get_data <- function(n, pos_const, muIsHard = TRUE) {
 
 ```{r}
 library(causalHAL)
+library(hal9001)
+seed <- rnorm(1)
 data <- get_data(1000, 1, TRUE)
 print(paste0("True ATE: ", data$ATE))
 # get nuisance functions for R-learner
 pi.hat <- data$pi
-m.hat <- data$mu0 * pA1W + (data$mu0 + data$tau) * (1-pA1W)
+m.hat <- data$mu0 * pi.hat + (data$mu0 + data$tau) * (1-pi.hat)
 
  
 
 # Fits additive piece-wise linear spline model for CATE with 50 knot points per covariate using highly adaptive lasso (see tlverse/hal9001 github R package)
-
+set.seed(seed)
 ADMLE_fit <- fit_hal_cate_partially_linear(data$W, data$A, data$Y, 
                               m.hat = m.hat,
                               pi.hat = pi.hat,
                               smoothness_orders_cate = 1, num_knots_cate = c(50), max_degree_cate = 1)
+inference_ate(ADMLE_fit)
+
+# Same analysis but using glmnet implementation with hal9001-basis design matrix.
+# May not reproduce estimates exactly but should be close.
+basis_list <- hal9001::enumerate_basis(data$W, smoothness_orders = 1, num_knots = 50, max_degree = 1)
+tau_basis <- hal9001::make_design_matrix(data$W, basis_list)
+set.seed(seed)
+ADMLE_fit <- fit_lasso_cate_partially_linear(tau_basis, data$A, data$Y, 
+                              m.hat = m.hat,
+                              pi.hat = pi.hat, standardize = FALSE)
 
 
 inference_ate(ADMLE_fit)
